--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,27 @@ body {
   font-weight: 400;
 }
 
-h2 {
+.title-primary {
+  color: #363636;
+  font-size: 2.4rem;
+  font-weight: 800;
+  line-height: 1.125;
+  text-align: center;
+}
+
+.title {
+  font-family: 'Noto Sans', sans-serif;
+  color: #363636;
+  font-size: 1.8rem;
+  line-height: 1.125;
+  text-align: center;
+}
+
+.text {
+  font-family: 'Noto Sans', sans-serif;
+  font-size: 1rem;
+}
+/* h2 {
   font-size: 2rem;
   font-family: 'Noto Sans', sans-serif;;
-}
+} */
